2014-01-06  Carl Hetherington  <cth@carlh.net>

	* Leave DCP directory creation until the last minute to help
	avoid half-eaten directories being left around (#174).

2014-01-05  Carl Hetherington  <cth@carlh.net>

	* Version 1.57 released.

2014-01-05  Carl Hetherington  <cth@carlh.net>

	* Use _fseeki64 on Windows when reading content files.

	* Various small fixes to i18n.

2014-01-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.56 released.

2014-01-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.55 released.

2014-01-03  Carl Hetherington  <cth@carlh.net>

	* New de_DE translation from Markus Raab.

	* Work-around mysterious call of pure virtual method inside boost.

2014-01-01  Carl Hetherington  <cth@carlh.net>

	* Bump ffmpeg version.

2013-12-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.54 released.

2013-12-30  Carl Hetherington  <cth@carlh.net>

	* Put catches around a few threads which could have uncaught exceptions.

	* Add nascent dcpomatic_create command-line program to create films.

2013-12-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.53 released.

2013-12-29  Carl Hetherington  <cth@carlh.net>

	* Fix failure to load content from directories with non-Latin names.

2013-12-28  Carl Hetherington  <cth@carlh.net>

	* Speculative fix for "find missing" not working on OS X (#255).

	* Fix failure to load films with missing still image content (#300).

2013-12-27  Carl Hetherington  <cth@carlh.net>

	* Fix non-update of video information on changing DCP resolution (#299).

	* Version 1.52 released.

2013-12-27  Carl Hetherington  <cth@carlh.net>

	* More speculative fixes for 4K.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.51 released.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* A couple of potential fixes for 4K.

	* Version 1.50 released.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.49 released.

2013-12-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.48 released.
